added budget estimator, categorization and front end changes